--- a/manifest.json
+++ b/manifest.json
@@ -29,9 +29,16 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["src/lib/webgazer.min.js", "src/content/content.js"],
-      "css": ["src/content/styles.css"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "src/lib/webgazer.min.js",
+        "src/content/content.js"
+      ],
+      "css": [
+        "src/content/styles.css"
+      ],
       "run_at": "document_idle"
     }
   ],
@@ -43,9 +50,13 @@
         "src/content/eye-tracker.js",
         "src/content/text-enhancer.js",
         "src/content/focus-overlay.js",
+        "src/lib/pdfjs/pdf.min.js",
+        "src/lib/pdfjs/pdf.worker.min.js",
         "assets/fonts/*"
       ],
-      "matches": ["<all_urls>"]
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
